--- a/app.htm
+++ b/app.htm
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Tic Tac Toe</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="board">
