--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
                 <div id="r3c3"></div>
             </div>
         </div>
+        <div id="orangeBox">
+    <span id="x">X</span>
+</div>
     </body>
 </body>
