--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="board">
-            <div>
-                <div id="r1c1"></div>
-                <div id="r1c2"></div>
-                <div id="r1c3"></div>
-            </div>
-            <div>
-                <div id="r2c1"></div>
-                <div id="r2c2"></div>
-                <div id="r2c3"></div>
-            </div>
-            <div>
-                <div id="r3c1"></div>
-                <div id="r3c2"></div>
-                <div id="r3c3"></div>
-            </div>
-        </div>
+        <table id="board">
+            <tr>
+                <td id="r1c1"></td>
+                <td id="r1c2"></td>
+                <td id="r1c3"></td>
+            </tr>
+            <tr>
+                <td id="r2c1"></td>
+                <td id="r2c2"></td>
+                <td id="r2c3"></td>
+            </tr>
+            <tr>
+                <td id="r3c1"></td>
+                <td id="r3c2"></td>
+                <td id="r3c3"></td>
+            </tr>
+        </table>
         <div id="orangeBox">
     <span id="x">X</span>
 </div>
