--- a/index.html
+++ b/index.html
@@ -5,25 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <table id="board">
-            <tr>
-                <td id="r1c1"></td>
-                <td id="r1c2"></td>
-                <td id="r1c3"></td>
-            </tr>
-            <tr>
-                <td id="r2c1"></td>
-                <td id="r2c2"></td>
-                <td id="r2c3"></td>
-            </tr>
-            <tr>
-                <td id="r3c1"></td>
-                <td id="r3c2"></td>
-                <td id="r3c3"></td>
-            </tr>
-        </table>
-        <div id="orangeBox">
-            <span id="x">X</span>
-        </div>
+        <canvas id="board"></canvas>
     </body>
 </body>
