--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Tic Tac Toe</title>
         <link rel="stylesheet" href="style.css">
+        <script defer src="script.js"></script>
     </head>
     <body>
         <canvas id="board"></canvas>
