--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
         <script defer src="script.js"></script>
     </head>
     <body>
-        <canvas id="board"></canvas>
+        <table id="board">
+            <tr>
+                <td id="r1c1"></td>
+                <td id="r1c2"></td>
+                <td id="r1c3"></td>
+            </tr>
+            <tr>
+                <td id="r2c1"></td>
+                <td id="r2c2"></td>
+                <td id="r2c3"></td>
+            </tr>
+            <tr>
+                <td id="r3c1"></td>
+                <td id="r3c2"></td>
+                <td id="r3c3"></td>
+            </tr>
+        </table>
     </body>
 </body>
