--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script defer src="script.js"></script>
     </head>
     <body>
-        <table id="board">
+        <table id="board" cellspacing="0">
             <tr>
                 <td id="r1c1"></td>
                 <td id="r1c2"></td>
