--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Tic Tac Toe</title>
         <link rel="stylesheet" href="style.css">
         <script defer src="script.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
     </head>
     <body>
         <table id="board" cellspacing="0">
