--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <script defer src="script.js"></script>
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
+        <meta name="theme-color" content="#00BCD4">
     </head>
     <body>
         <table id="board" cellspacing="0">
