--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ button {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 50%;
     font-size: 150%
 }
 button:hover {
@@ -104,7 +104,7 @@ span.psw {
   <!-- Modal Content -->
   <form class="modal-content animate" action="/action_page.php">
 
-    <div class="container"><
+    <div class="container">
         <b id="title"></b>
       <button type="button" onclick="toggleSignIn()" id="enter">Play Again</button><span><button type="button" onclick="">Multiplayer</button></span>
       
