--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ span.psw {
   <form class="modal-content animate" action="/action_page.php">
 
     <div class="container">
-        <b id="title"></b>
+        <h2 id="title"></h2>
       <button type="button" onclick="toggleSignIn()" id="enter">Play Again</button><span><button type="button" onclick="">Multiplayer</button></span>
       
     </div>
