--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ button {
     background-color: #0062e2;
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin: auto;
     border: none;
     cursor: pointer;
-    width: 40%;
+    width: 50%;
     font-size: 150%
 }
 button:hover {
