--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ button {
     background-color: #0062e2;
     color: white;
     padding: 14px 20px;
-    margin: auto;
+    margin: 20px;
     border: none;
     cursor: pointer;
     width: 50%;
