--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ span.psw {
 
     <div class="container">
         <h1 id="title"></h1>
-      <button type="button" onclick="toggleSignIn()" id="enter">Play Again</button><span><button type="button" onclick="">Multiplayer</button></span>
+      <button type="button" onclick="playAgain()" id="enter">Play Again</button><span><button type="button" onclick="">Multiplayer</button></span>
       
     </div>
 
