Fix things wrong with code
1. 2 `<body>` tags
2. bad formatting
3. unnesesary `<span>` tags
4. too much stuff on the same line
6. `/actionpage.php` doesn't exist

--- a/index.html
+++ b/index.html
@@ -25,25 +25,19 @@
                 <td id="r3c3"></td>
             </tr>
         </table>
+
+        <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+            <!-- The Modal -->
+            <div id="id01" class="modal">
+                <form class="modal-content animate">
+                    <div class="container">
+                        <h1 id="title"></h1>
+                        <button type="button" onclick="playAgain()" id="enter">Play Again</button>
+                        <button type="button" onclick="void(0)">Multiplayer</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </body>
-
-<body>
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-
-<!-- The Modal -->
-<div id="id01" class="modal">
-
-  <!-- Modal Content -->
-  <form class="modal-content animate" action="/action_page.php">
-
-    <div class="container">
-        <h1 id="title"></h1>
-      <button type="button" onclick="playAgain()" id="enter">Play Again</button><span><button type="button" onclick="">Multiplayer</button></span>
-      
-    </div>
-
-    </div>
-  </form>
-
-</body>
-
+</html>
+《
