remove mdl layout thing
it's not included (i think i might've done it oops)

--- a/index.html
+++ b/index.html
@@ -25,18 +25,16 @@
                 <td id="r3c3"></td>
             </tr>
         </table>
-
-        <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-            <!-- The Modal -->
-            <div id="id01" class="modal">
-                <form class="modal-content animate">
-                    <div class="container">
-                        <h1 id="title"></h1>
-                        <button type="button" onclick="playAgain()" id="enter">Play Again</button>
-                        <button type="button" onclick="void(0)">Multiplayer</button>
-                    </div>
-                </form>
-            </div>
+        
+        <!-- The Modal -->
+        <div id="id01" class="modal" style="display:none">
+           <form class="modal-content animate">
+                <div class="container">
+                    <h1 id="title">Play Again</h1>
+                    <button type="button" onclick="playAgain()" id="enter">Play Again</button>
+                    <button type="button" onclick="void(0)">Multiplayer</button>
+                </div>
+            </form>
         </div>
     </body>
 </html>
