--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </table>
         
         <!-- The Modal -->
-        <div id="id01" class="modal" style="display:none">
+        <div id="id01" class="modal">
            <form class="modal-content animate">
                 <div class="container">
-                    <h1 id="title">Play Again</h1>
+                    <h1 id="title">Tic Tac Toe</h1>
                     <button type="button" onclick="playAgain()" id="enter">Play Again</button>
                     <button type="button" onclick="void(0)">Multiplayer</button>
                 </div>
