--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <script defer src="script.js"></script>
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
         <meta name="theme-color" content="#00BCD4">
+        
+        <meta name="description" content="Get three in a row!">
+        <meta name="application-name" content="Tic Tac Toe">
+        <meta name="
     </head>
     <body>
         <table id="board" cellspacing="0">
