--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
         <meta name="description" content="Get three in a row!">
         <meta name="application-name" content="Tic Tac Toe">
-        <meta name="
+        <meta name="msapplication-tooltip" content="Get three in a row!">
     </head>
     <body>
         <table id="board" cellspacing="0">
