--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="Get three in a row!">
         <meta name="application-name" content="Tic Tac Toe">
         <meta name="msapplication-tooltip" content="Get three in a row!">
+        <meta name="msapplication-window" content="width=1024;height=768" />
     </head>
     <body>
         <table id="board" cellspacing="0">
