--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="application-name" content="Tic Tac Toe">
         <meta name="msapplication-tooltip" content="Get three in a row!">
         <meta name="msapplication-window" content="width=1024;height=768" />
+        <meta name="msapplication-navbutton-color" content="#00bcd4">
     </head>
     <body>
         <table id="board" cellspacing="0">
