--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="container">
                     <h1 id="title">Tic Tac Toe</h1>
                     <button type="button" onclick="playAgain()" id="enter">Play Again</button>
-                    <button type="button" onclick="void(0)">Multiplayer</button>
+                    <button type="button" onclick="multiplayer()">Multiplayer</button>
                 </div>
             </form>
         </div>
