--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <meta name="msapplication-tooltip" content="Get three in a row!">
         <meta name="msapplication-window" content="width=1024;height=768" />
         <meta name="msapplication-navbutton-color" content="#00bcd4">
+        
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <table id="board" cellspacing="0">
