--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
            <form class="modal-content animate">
                 <div class="container">
                     <h1 id="title">Tic Tac Toe</h1>
-                    <button type="button" onclick="playAgain()" id="enter">Play Again</button>
-                    <button type="button" onclick="multiPlayer()">Multiplayer</button>
+                    <button type="button" onclick="playAgain()" id="enter">1 Player</button>
+                    <button type="button" onclick="multiPlayer()">2 Player</button>
                 </div>
             </form>
         </div>
