--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
            <form class="modal-content animate">
                 <div class="container">
                     <h1 id="title">Tic Tac Toe</h1>
-                    <button type="button" onclick="playAgain()">1 Player</button>
-                    <button type="button" onclick="multiPlayer()">2 Player</button>
+                    <button type="button" onclick="playAgain('easy')">Easy</button>
+                    <button type="button" onclick="playAgain('medium')">Medium</button>
+                    <button type="button" onclick="multiPlayer()">Multiplayer</button>
                 </div>
             </form>
         </div>
